@@ -83,11 +83,17 @@ struct {
   unsigned int b1 : 3;
 } size2d_bf;
 
+struct { /* Bit-fields that end on byte boundary */
+  unsigned int b0 : 3;
+  unsigned int b1 : 5;
+  unsigned int b2 : 5;
+  unsigned int b3 : 3;
+} size2e_bf;
+
 struct {
   unsigned int b0 : 3;
   unsigned int b1 : 12;
 } size3a_bf;
-
 
 struct {
   signed int s0_7  : 7;
@@ -291,6 +297,16 @@ testBitfieldsMultibitLiteral(void)
   size2d_bf.b1 = 5;
   ASSERT(size2d_bf.b0==0x0a46);
   ASSERT(size2d_bf.b1==5);
+
+  size2e_bf.b0 = 2;
+  size2e_bf.b1 = 2;
+  size2e_bf.b2 = 2;
+  size2e_bf.b3 = 2;
+
+  ASSERT(size2e_bf.b0==2);
+  ASSERT(size2e_bf.b1==2);
+  ASSERT(size2e_bf.b2==2);
+  ASSERT(size2e_bf.b3==2);
 #endif  /* !__SDCC_pic16 */
 }
 
@@ -335,6 +351,17 @@ testBitfieldsMultibit(void)
   size2d_bf.b1 = x;
   ASSERT(size2d_bf.b0==0x0a46);
   ASSERT(size2d_bf.b1==5);
+
+  x = 2;
+  size2e_bf.b0 = x;
+  size2e_bf.b1 = x;
+  size2e_bf.b2 = x;
+  size2e_bf.b3 = x;
+
+  ASSERT(size2e_bf.b0==2);
+  ASSERT(size2e_bf.b1==2);
+  ASSERT(size2e_bf.b2==2);
+  ASSERT(size2e_bf.b3==2);
 #endif  /* !__SDCC_pic16 */
 }
 
